package behavioral.observer.atm_ca5;

public interface TaiKhoanATM {
    boolean kiemTraSoDu(int soTien);
    void nhanThongBao(int soTienRut, boolean thanhCong);
}
